manifests/frontend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: item-cache-container
        image: item-cache-frontend:dev
        ports:
        -  containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: item-cache-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
